# OpenRSVP

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  ISSUE_15_WEB_PUSH_PLAN.md  K8S_DIAGRAMS.md  K8S_SCALE_PLAN.md  LICENSE.md  Makefile  README.md  REQUIREMENTS.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  events.db  hello.py  main.py  pyproject.toml  requirements.txt
OpenRSVP/: __init__.py  database.py  events.py  models.py  rsvp.py  user.py  users.py  utils.py
data/: openrsvp.db
deploy/nginx/: default.conf
docs/: api.html  calendar.html  capacity.html  cli.html  decay.html  deploy.html  index.html  rsvp-close.html  security_findings_dev.md  style.css  tokens.html  web-app.html
openrsvp/: __init__.py  api.py  cli.py  config.py  crud.py  database.py  decay.py  models.py  partials.py  scheduler.py  seed.py  storage.py  utils.py  web.py
openrsvp/alembic/: __init__.py  env.py
openrsvp/alembic/versions/: 0001_initial_schema.py  0002_rsvp_closures.py
openrsvp/static/: app.css  app.js  event-admin.js  event-page.js  my-events.js  theme-init.js
openrsvp/templates/: base.html  channel.html  discover_channels.html  error.html  event.html  event_admin.html  event_create.html  event_created.html  event_deleted.html  help.html  home.html  my_events.html  root_admin.html  rsvp_created.html  rsvp_edit.html  rsvp_form.html
openrsvp/templates/help/: events.html  faq.html  features.html  help_base.html  index.html  privacy.html  rsvp.html
openrsvp/templates/partials/: admin_approval_counts.html  admin_approval_filters.html  admin_channels_table.html  admin_events_table.html  admin_pending_alert.html  admin_rsvp_card.html  admin_rsvp_response.html  attendee_messages.html  discover_channels_results.html  event_hero_details.html
openrsvp/utils/: __init__.py  ics.py
scripts/: renew_certificates.sh  security_probe.py
sql/: schema.sql
templates/: 404.html  _footer.html  _header.html  _navbar.html  _w3w.html  event.html  event_create.html  get_event.html  get_event_create.html  get_event_id.html  get_events.html  get_index.html  get_rsvp.html  get_user.html  index.html  new_event.html  newevent.html  user_create.html  user_login.html
templates/components/: bootstrap_js.html  navbar.html  pagination.html  popper_js.html  w3w.html
tests/: conftest.py  test_api.py  test_crud.py  test_ics.py  test_migrations.py  test_storage.py  test_utils.py
