[project]
name = "OpenRSVP"
version = "0.1.0"
authors = [
    {name = "Brandon Leon", email = "brandonleon@pm.me"},
]
description = "A simple RSVP system for events."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.114.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "markdown>=3.7",
    "bleach>=6.1.0",
    "sqlmodel>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "icecream>=2.1.3",
    "pytest>=8.3.3",
]
