[project]
name = "OpenRSVP"
version = "0.1.0"
authors = [
    {name = "Brandon Leon", email = "brandonleon@pm.me"},
]
description = "A simple RSVP system for events."
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "markdown>=3.7",
    "bleach>=6.1.0",
    "sqlmodel>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "icecream>=2.1.3",
    "pytest>=8.3.3",
]

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []


# Specify the lines to be updated using search and replace
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "constants.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""