[project]
name = "openrsvp"
version = "0.4.0"
description = "Accountless RSVP platform powered by FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "SQLAlchemy>=2.0",
    "APScheduler>=3.10",
    "typer[all]>=0.12",
    "python-multipart>=0.0.9",
]

[project.scripts]
openrsvp = "openrsvp.cli:app"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["openrsvp*"]

[dependency-groups]
dev = [
    "faker>=38.0.0",
    "httpx>=0.27.0",
    "pytest>=9.0.1",
    "pytest-sugar>=1.1.1",
]
